Create place resource test integration DTO and Entity refactory